--- a/res/values/system_arrays.xml
+++ b/res/values/system_arrays.xml
@@ -38,4 +38,16 @@
     	<item>incall</item>
     	<item>vr</item>
     </string-array>
+    <string-array name="default_fps_listentries">
+    	<item>30</item>
+    	<item>60</item>
+    	<item>90</item>
+    	<item>120</item>
+     </string-array>
+     <string-array name="default_fps_listvalues">
+    	<item>1</item>
+    	<item>3</item>
+    	<item>4</item>
+    	<item>5</item>
+    </string-array>
 </resources>
