--- a/res/values-ru-rRU/audio_tweaks_strings.xml
+++ b/res/values-ru-rRU/audio_tweaks_strings.xml
@@ -13,10 +13,10 @@
     <string name="audio_tweaks_hp_detect_summary">Отключить определение проводных наушников или гарнитуры. Для аппаратов с поврежденным портом USB.</string>
     <string name="audio_tweaks_suspend_play_title">Усыплять при проигрывании</string>
     <string name="audio_tweaks_suspend_play_summary">Разрешить сон системы при проигрывании музыки. Совместимо не со всеми проигрывателями.</string>
-    <string name="audio_tweaks_a2dp_sbc_hd_title">Высокий битрейт SBC</string>
-    <string name="audio_tweaks_a2dp_sbc_hd_summary">Использовать высокий SBC битрейт для A2DP профиля Bluetooth</string>
-    <string name="audio_tweaks_a2dp_sbc_hdx_title">Высочайший битрейт SBC</string>
-    <string name="audio_tweaks_a2dp_sbc_hdx_summary">Использовать высочайший SBC битрейт для A2DP профиля Bluetooth</string>
+    <string name="audio_tweaks_a2dp_sbc_hd_title">SBC Dual Channel</string>
+    <string name="audio_tweaks_a2dp_sbc_hd_summary">Использовать SBC Dual Channel режим для удвоения битрейта для A2DP профиля Bluetooth</string>
+    <string name="audio_tweaks_a2dp_sbc_hdx_title">Высокий битрейт SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_hdx_summary">Использовать высокий SBC битрейт для A2DP профиля Bluetooth</string>
     <string name="audio_tweaks_a2dp_sbc_hdu_title">Не ограничивать битрейт SBC</string>
     <string name="audio_tweaks_a2dp_sbc_hdu_summary">Использовать неограниченный SBC битрейт для A2DP профиля Bluetooth</string>
     <string name="audio_tweaks_a2dp_sbc_48_title">Предпочесть 48 КГц</string>
