--- a/res/values-ru-rRU/performance_strings.xml
+++ b/res/values-ru-rRU/performance_strings.xml
@@ -1,15 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <!-- Power Save -->
-    <string name="performance_title">Приложения</string>
-    <string name="performance_summary">Настройки приложений и производительности</string>
-
-    <string name="default_profiles_title">Профили по умолчанию</string>
-    <string name="scr_off_profile_title">Профиль при выключенном экране</string>
-    <string name="idle_profile_title">Профиль в режиме ожидания</string>
-    <string name="idle_therm_profile_title">Температурный Профиль в ожидании</string>
-
-    <string name="edit_perf_profile_title">Редактирование профиля</string>
-    <string name="reset_perf_profile_title">Сбросить по умолчанию</string>
+    <string name="performance_title">Профили Приложений</string>
+    <string name="performance_summary">Настройки приложений и профилей производительности</string>
 
 </resources>
