--- a/res/values-ru-rRU/system_strings.xml
+++ b/res/values-ru-rRU/system_strings.xml
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <!-- Power Save -->
-    <string name="system_tweaks_title">Система</string>
-    <string name="system_tweaks_summary">Настройки системы</string>
+    <string name="system_title">Система</string>
+    <string name="system_summary">Общие настройки системы и настройки по умолчанию</string>
+
     <string name="default_profiles_title">Профили по умолчанию</string>
-    <string name="system_tweaks_sec_hwc_title">Отключить вторичный HWC</string>
-    <string name="system_tweaks_sec_hwc_summary">Отключить HW Overlay для вторичного экрана. Решает проблему мерцания на Android Auto и WFD.\nТребуется перезагрузка!</string>
     <string name="scr_off_profile_title">Профиль при выключенном экране</string>
     <string name="idle_profile_title">Профиль в режиме ожидания</string>
     <string name="idle_therm_profile_title">Температурный Профиль в ожидании</string>
+
+    <string name="edit_perf_profile_title">Редактирование профиля</string>
+    <string name="reset_perf_profile_title">Сбросить по умолчанию</string>
+
 </resources>
