--- a/res/values/performance_strings.xml
+++ b/res/values/performance_strings.xml
@@ -1,16 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <!-- Power Save -->
-    <string name="performance_title">Apps and Performance</string>
-    <string name="performance_summary">Applications and performance related settings</string>
-
-    <string name="default_profiles_title">Default profiles</string>
-
-    <string name="scr_off_profile_title">Screen off profile</string>
-    <string name="idle_profile_title">Idle profile</string>
-    <string name="idle_therm_profile_title">Idle thermal profile</string>
-
-    <string name="edit_perf_profile_title">Edit profile</string>
-    <string name="reset_perf_profile_title">Reset profile</string>
+    <string name="performance_title">App Profiles</string>
+    <string name="performance_summary">Application performance related settings</string>
 
 </resources>
