--- a/res/xml/performance.xml
+++ b/res/xml/performance.xml
@@ -20,7 +20,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/performance_title">
+    android:title="@string/performance_title"
+    android:summary ="@string/performance_summary" >
 
     <!-- PreferenceCategory
         android:key="system_settings"
@@ -29,9 +30,9 @@
 
     </PreferenceCategory -->
 
-    <PreferenceCategory
+    <!-- PreferenceCategory
         android:key="app_setings_cat"
-        android:title="@string/app_settings_category">
+        android:title="@string/app_settings_category" -->
 
         <Preference
             android:key="app_setings"
@@ -58,62 +59,7 @@
             android:summary="@string/app_setings_reset_summary" />
 
 
-    </PreferenceCategory>
+    <!-- /PreferenceCategory -->
 
-
-
-    <PreferenceCategory
-       android:key="default_profiles"
-       android:title="@string/default_profiles_title">
-
-        <ListPreference
-    	    android:key="default_perf_profile"
-    	    android:title="@string/app_profile_performance_title"
-    	    android:entries="@array/default_performance_listentries"
-    	    android:entryValues="@array/default_performance_listvalues" 
-            android:defaultValue="balance"
-            android:summary="%s"/>
-
-        <ListPreference
-            android:key="default_therm_profile"
-            android:title="@string/app_profile_thermal_title"
-            android:entries="@array/default_thermal_listentries"
-            android:entryValues="@array/default_thermal_listvalues"
-            android:defaultValue="balance"
-            android:summary="%s" />
-
-        <ListPreference
-    	    android:key="scr_off_perf_profile"
-    	    android:title="@string/scr_off_profile_title"
-    	    android:entries="@array/default_performance_listentries"
-    	    android:entryValues="@array/default_performance_listvalues" 
-            android:defaultValue="balance"
-            android:summary="%s"/>
-
-        <ListPreference
-    	    android:key="idle_perf_profile"
-    	    android:title="@string/idle_profile_title"
-    	    android:entries="@array/default_performance_listentries"
-    	    android:entryValues="@array/default_performance_listvalues" 
-            android:defaultValue="balance"
-            android:summary="%s"/>
-
-        <ListPreference
-    	    android:key="idle_therm_profile"
-    	    android:title="@string/idle_therm_profile_title"
-    	    android:entries="@array/default_thermal_listentries"
-    	    android:entryValues="@array/default_thermal_listvalues" 
-            android:defaultValue="balance"
-            android:summary="%s"/>
-
-        <ListPreference
-    	    android:key="edit_perf_profile"
-    	    android:title="@string/edit_perf_profile_title"
-    	    android:entries="@array/default_performance_listentries"
-    	    android:entryValues="@array/default_performance_listvalues" 
-            android:defaultValue="balance"
-            android:summary=""/>
-
-    </PreferenceCategory>
 
 </PreferenceScreen>
