--- a/res/xml/perf_profile.xml
+++ b/res/xml/perf_profile.xml
@@ -18,6 +18,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
     android:title="@string/edit_profile_title">
 
      <PreferenceCategory
@@ -91,6 +92,24 @@
          android:title="@string/edit_profile_corecontrol_title"
          android:summary="@string/edit_profile_corecontrol_summary"
          android:defaultValue="false" />
+
+     <com.aicp.gear.preference.SeekBarPreferenceCham
+         android:key="edit_profile_sched_boost"
+         android:title="@string/edit_profile_sched_boost_title"
+         android:max="10"
+         android:min="0"
+         aicpextras:unitsLeft=""
+         aicpextras:unitsRight=""
+         android:defaultValue="0"/>
+
+     <com.aicp.gear.preference.SeekBarPreferenceCham
+         android:key="edit_profile_gpu_boost"
+         android:title="@string/edit_profile_gpu_boost_title"
+         android:max="10"
+         android:min="0"
+         aicpextras:unitsLeft=""
+         aicpextras:unitsRight=""
+         android:defaultValue="0"/>
 
      <Preference
          android:key="edit_profile_reset"
