--- a/res/values/interface_strings.xml
+++ b/res/values/interface_strings.xml
@@ -17,4 +17,12 @@
     <string name="doze_title">Wake screen for notifications</string>
     <string name="doze_summary">When screen is dark, it turns on for new notifications</string>
 
+    <string name="baikalos_headsup_incall_title">InCall Heads Up</string>
+    <string name="baikalos_headsup_incall_summary">Do not use heads up notification for Incoming Call</string>
+    <string name="baikalos_headsup_force_sms_title">Force SMS</string>
+    <string name="baikalos_headsup_force_sms_summary">Force Heads Up notifications for the default SMS app</string>
+
+    <string name="fp_wake_unlock_title">Enable FP Wakeup</string>
+    <string name="fp_wake_unlock_summary">Wakeup device on fingerprint scanner touch</string>
+
 </resources>
