--- a/res/values-ru/system_strings.xml
+++ b/res/values-ru/system_strings.xml
@@ -18,4 +18,7 @@
     <string name="default_rotation_title">Авто поворот</string>
     <string name="default_rotation_summary">Режим авто поворота экрана по умолчанию</string>
 
+    <string name="smart_nfc_title">Умный NFC</string>
+    <string name="smart_nfc_summary">Включить NFC при вызове расширенного меню кнопки питания и отключить при выходе</string>
+
 </resources>
