--- a/res/values/system_arrays.xml
+++ b/res/values/system_arrays.xml
@@ -43,11 +43,30 @@
     	<item>60</item>
     	<item>90</item>
     	<item>120</item>
+    	<item>Dynamic</item>
      </string-array>
      <string-array name="default_fps_listvalues">
     	<item>1</item>
     	<item>3</item>
     	<item>4</item>
     	<item>5</item>
+    	<item>6</item>
     </string-array>
+
+    <string-array name="backup_restore_listentries">
+    	<item>@string/backup_restore_apps</item>
+    	<item>@string/backup_restore_apps_obb</item>
+    	<!-- item>@string/backup_restore_sys</item>
+    	<item>@string/backup_restore_sys_apps</item>
+    	<item>@string/backup_restore_sys_apps_obb</item -->
+    </string-array>
+
+    <string-array name="backup_restore_listvalues">
+    	<item>apps</item>
+    	<item>apps_obb</item>
+    	<!-- item>sys</item>
+    	<item>sys_apps</item>
+    	<item>sys_apps_obb</item -->
+    </string-array>
+
 </resources>
